--- a/main.ipynb
+++ b/main.ipynb
@@ -9,7 +9,6 @@
     "from gensim import corpora, models\n",
     "import sys\n",
     "import os\n",
-    "import tool\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -494,7 +493,7 @@
    "outputs": [],
    "source": [
     "senti_dict2 = dict(list(zip(test_set['sentent'], test_set['labels'])))\n",
-    "senti_dict2['討論事項：國內外經濟金融情勢與本行貨幣政策，提請討論\t'] = 0"
+    "senti_dict2['討論事項：國內外經濟金融情勢與本行貨幣政策，提請討論'] = 0"
    ]
   },
   {
@@ -575,8 +574,7 @@
    "source": [
     "#model.save('./model/LDA_model2')\n",
     "#model = model.load('./model/LDA_model')\n",
-    "model.print_topics(num_topics = 3, num_words = 5)  #0利率 1物價 2就業\n",
-    "#(國際金融,國內金融,貨幣政策)"
+    "model.print_topics(num_topics = 3, num_words = 5)  #0利率 1物價 2就業"
    ]
   },
   {
@@ -585,7 +583,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels = {0:'rates',1:'prices',2:'employment'}\n",
+    "labels = {2:'rates',0:'prices',1:'employment'}\n",
     "long_num = len(documents1)\n",
     "long_corpus = corpus[:long_num]\n",
     "short_corpus = corpus[long_num:]"
@@ -3125,40 +3123,6 @@
     "out_to_csv(out_long, columns_name, 'out_long1')\n",
     "out_to_csv(out_short, columns_name, 'out_short1')\n",
     "out_to_csv(out_mix, columns_name, 'out_mix1')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 119,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "name_path = '海關出口'\n",
-    "df = pd.read_csv('./index/index2/' + name_path +'.csv')\n",
-    "#df['value'] = df['value'].map(lambda x : int(x.replace(',','')))\n",
-    "df = df.dropna(0)\n",
-    "last_value = np.zeros(1)\n",
-    "last_value = np.hstack([last_value, df['value'].values[:-1]])\n",
-    "df['growh_rate'] = 100 * (df['value'].values - last_value) / df['value'].values\n",
-    "df.to_csv('./index/index2/' + name_path + '2.csv', index = None)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import tool"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tool."
    ]
   },
   {
